[gd_scene load_steps=8 format=2]

[ext_resource path="res://Overworld/Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Overworld/Assets/Sprites/Player/PlayerN.png" type="Texture" id=2]
[ext_resource path="res://Overworld/Assets/Sprites/Player/PlayerE.png" type="Texture" id=3]
[ext_resource path="res://Overworld/Assets/Sprites/Player/PlayerS.png" type="Texture" id=4]
[ext_resource path="res://Overworld/Scripts/PlayerCam.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 41.2128, 51.3897 )

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "north",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "east",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "south",
"speed": 5.0
} ]

[node name="Player" type="Area2D"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Angular", "Applied Forces", "Audio Bus", "Linear", "Transform" ]
SPEED = 200

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]

shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="1"]

frames = SubResource( 2 )
animation = "east"

[node name="FoodTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 5.0
one_shot = false
autostart = false

[node name="FollowTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 0.1
one_shot = false
autostart = false

[node name="PlayerCam" type="Camera2D" parent="." index="4"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
script = ExtResource( 5 )
_sections_unfolded = [ "Drag Margin", "Limit", "Offset", "Smoothing" ]

[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]

[connection signal="timeout" from="FoodTimer" to="." method="_on_FoodTimer_timeout"]

[connection signal="timeout" from="FollowTimer" to="." method="_on_FollowTimer_timeout"]

[connection signal="timeout" from="FollowTimer" to="." method="_on_HeldTimer_timeout"]


